--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-carousel": "^1.0.5",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.4",
     "hooper": "^0.3.4",
     "local-storage": "^2.0.0",
@@ -22,7 +22,8 @@
     "vue-picture-input": "^2.1.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.5",
-    "vueup": "^1.3.0"
+    "vueup": "^1.3.0",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3",
