--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:cc97c66d3bc7bef971b89bc3
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-#server.port=8080
+server.port=${PORT:8080}
 
 #spring:
 #  datasource:
