--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@chenfengyuan/vue-carousel": "^1.0.5",
+    "@chenfengyuan/vue-carousel": "^1.0.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.4",
     "hooper": "^0.3.4",
+    "jquery": "^3.5.1",
     "local-storage": "^2.0.0",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-carousel": "^0.18.0",
     "vue-displacement-slideshow": "^2.3.1",
