--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:48282d9dad9b604037a15da8
 
 spring.jpa.hibernate.ddl-auto= update
 
+server.port=${PORT}
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 bezkoder.app.jwtSecret= bezKoderSecretKey
