--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:${SPRING_DATASOURCE_URL:postgresql://localhost:5432/p
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:1234}
 
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 
 server.port=${PORT:8080}
 
